# k8s-postgres-operator

./: .clippy.toml  .dockerignore  .gitignore  .mcp.json  .rustfmt.toml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE.md  Makefile  README.md  integration-test.output
.claude/: settings.json
.claude/agents/: kubernetes-specialist.md  kubernetes-specialist.yml  platform-engineer.md  rust-engineer.md  rust-engineer.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml  secure_workflows.yml
charts/postgres-operator/: Chart.yaml  README.md  values.yaml
charts/postgres-operator/templates/: NOTES.txt  _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  crd.yaml  deployment.yaml  postgrescluster-crd.yaml  postgresdatabase-crd.yaml  postgresupgrade-crd.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
config/crd/: postgres-cluster.yaml  postgres-database.yaml  postgres-upgrade.yaml
config/deploy/: deployment.yaml  namespace.yaml  networkpolicy.yaml
config/rbac/: role.yaml  rolebinding.yaml  serviceaccount.yaml
config/samples/: automatic-failover.yaml  backup-azure.yaml  backup-encrypted.yaml  backup-gcs.yaml  backup-minio.yaml  backup-s3.yaml  dev-ephemeral.yaml  networkpolicy-postgresql.yaml  pgbouncer-pooler.yaml  production-ha.yaml  resource-qos-guaranteed.yaml  scaling-dev-scale-to-zero.yaml  scaling-dev-with-pgbouncer.yaml  scaling-disabled.yaml  scaling-edge-aggressive.yaml  scaling-prod-combined.yaml  scaling-prod-connections.yaml  scaling-prod-cpu.yaml  scaling-replication-lag-test.yaml  scaling-test-cpu.yaml  standalone.yaml  streaming-replicas.yaml  tls-enabled.yaml  upgrade-v16-to-v17.yaml
config/webhook/: certificate.yaml  service.yaml  validating-webhook.yaml
docs/: BACKUP_AND_RESTORE.md  api-reference.md  architecture.md  backup-restore.md  development.md  operations.md  upgrades.md
docs/plans/: blue-green-major-version-upgrades.md  tokio-postgres-direct-sql.md
docs/runbooks/: upgrade-rollback.md  upgrade-stuck.md  upgrade-verification-failed.md
src/: health.rs  lib.rs  main.rs
src/controller/: backup_status.rs  cleanup.rs  cluster_backup_status.rs  cluster_reconciler.rs  cluster_status.rs  cluster_validation.rs  context.rs  database_reconciler.rs  error.rs  mod.rs  reconciler.rs  replication_lag.rs  state_machine.rs  status.rs  upgrade_error.rs  upgrade_reconciler.rs  upgrade_state_machine.rs  validation.rs
src/crd/: mod.rs  postgres_cluster.rs  postgres_database.rs  postgres_upgrade.rs
src/postgres/: config.rs
src/resources/: backup.rs  certificate.rs  common.rs  http_scaled_object.rs  mod.rs  network_policy.rs  patroni.rs  pdb.rs  pgbouncer.rs  port_forward.rs  postgres_client.rs  replication.rs  scaled_object.rs  secret.rs  service.rs  sql.rs
src/webhooks/: mod.rs  server.rs
src/webhooks/policies/: backup.rs  immutability.rs  mod.rs  production.rs  tls.rs  upgrade.rs
tests/common/: fixtures.rs  mod.rs
tests/integration/: assertions.rs  cluster.rs  connectivity_tests.rs  crd.rs  database_tests.rs  fixtures.rs  functional_tests.rs  keda_scaling_tests.rs  main.rs  namespace.rs  operator.rs  port_forward.rs  postgres.rs  scaling_tests.rs  slow_tests.rs  tests.rs  tls_tests.rs  upgrade_tests.rs  wait.rs
tests/proptest/: mod.proptest-regressions  mod.rs
tests/unit/: database.rs  mod.rs  network_policy.rs  resources.rs  state_machine.rs  status.rs  validation.rs  webhooks.rs
