[package]
name = "postgres-operator"
version = "0.1.1"
edition = "2024"
rust-version = "1.92"
description = "A Kubernetes operator for managing PostgreSQL clusters"
license = "MIT"

[dependencies]
# Kubernetes
# Note: Using v1_34 feature but targeting K8s 1.35 clusters.
# New 1.35 fields (like resizePolicy) are added via JSON patching.
#
# TODO(k8s-openapi-upgrade): When k8s-openapi releases a version with v1_35 support:
# 1. Update to: k8s-openapi = { version = "0.27", features = ["v1_35"] }
# 2. In src/resources/patroni.rs:
#    - Remove add_resize_policy_to_statefulset() function
#    - Use native ContainerResizePolicy type directly in generate_patroni_statefulset()
# 3. In src/resources/pgbouncer.rs:
#    - Remove add_resize_policy_to_deployment() function
#    - Use native ContainerResizePolicy type directly in generate_pgbouncer_deployment()
# 4. Run `cargo check` to verify everything compiles
# 5. Track progress at: https://github.com/Arnavion/k8s-openapi/issues
kube = { version = "2", default-features = false, features = ["runtime", "derive", "client", "rustls-tls"] }
k8s-openapi = { version = "0.26", features = ["v1_34"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"

# Error handling
thiserror = "2"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP server for health endpoints and metrics
axum = "0.8"
prometheus-client = "0.24"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
sha2 = "0.10"
base64 = "0.22"

# TLS crypto backend for rustls
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs", "std", "tls12"] }

# Leader election
kube-leader-election = "0.42"
hostname = "0.4"

[dev-dependencies]
tokio-test = "0.4"
uuid = { version = "1", features = ["v4"] }
serde_yaml = "0.9"
proptest = "1.6"

[[test]]
name = "integration"
path = "tests/integration/main.rs"

[[test]]
name = "unit"
path = "tests/unit/mod.rs"

[[test]]
name = "proptest"
path = "tests/proptest/mod.rs"
