[package]
name = "postgres-operator"
version = "0.1.1"
edition = "2024"
rust-version = "1.92"
description = "A Kubernetes operator for managing PostgreSQL clusters"
license = "MIT"

[dependencies]
# Kubernetes
# Note: Using v1_34 feature but targeting K8s 1.35 clusters.
# New 1.35 fields (like resizePolicy) are added via JSON patching.
#
# TODO(k8s-openapi-upgrade): When k8s-openapi releases a version with v1_35 support:
# 1. Update to: k8s-openapi = { version = "=0.27.x", features = ["v1_35"] }
# 2. In src/resources/patroni.rs:
#    - Remove add_resize_policy_to_statefulset() function
#    - Use native ContainerResizePolicy type directly in generate_patroni_statefulset()
# 3. In src/resources/pgbouncer.rs:
#    - Remove add_resize_policy_to_deployment() function
#    - Use native ContainerResizePolicy type directly in generate_pgbouncer_deployment()
# 4. Run `cargo check` to verify everything compiles
# 5. Track progress at: https://github.com/Arnavion/k8s-openapi/issues
kube = { version = "=2.0.1", default-features = false, features = ["runtime", "derive", "client", "rustls-tls", "ws"] }
k8s-openapi = { version = "=0.26.1", default-features = false, features = ["v1_34"] }

# Async runtime
tokio = { version = "=1.49.0", default-features = false, features = ["full"] }
futures = { version = "=0.3.31", default-features = false }

# Serialization
serde = { version = "=1.0.228", default-features = false, features = ["derive"] }
serde_json = { version = "=1.0.149", default-features = false }
schemars = { version = "=1.2.0", default-features = false }

# Error handling
thiserror = { version = "=2.0.17", default-features = false }

# Logging/Tracing
tracing = { version = "=0.1.44", default-features = false }
tracing-subscriber = { version = "=0.3.22", default-features = false, features = ["std", "fmt", "env-filter", "json"] }

# HTTP server for health endpoints and metrics
axum = { version = "=0.8.8", default-features = false, features = ["http1", "tokio"] }
prometheus-client = { version = "=0.24.0", default-features = false }

# HTTP client for Patroni API queries
hyper = { version = "=1.8.1", default-features = false, features = ["client", "http1"] }
hyper-util = { version = "=0.1.19", default-features = false, features = ["tokio", "client", "client-legacy"] }
http-body-util = { version = "=0.1.3", default-features = false }
bytes = { version = "=1.11.0", default-features = false }

# Utilities
chrono = { version = "=0.4.42", default-features = false, features = ["serde"] }
rand = { version = "=0.9.2", default-features = false }
sha2 = { version = "=0.10.9", default-features = false }
base64 = { version = "=0.22.1", default-features = false }

# TLS crypto backend for rustls
rustls = { version = "=0.23.36", default-features = false, features = ["aws-lc-rs", "std", "tls12"] }

# Leader election
kube-leader-election = { version = "=0.42.0", default-features = false }
hostname = { version = "=0.4.2", default-features = false }

[dev-dependencies]
tokio-test = { version = "=0.4.5", default-features = false }
uuid = { version = "=1.19.0", default-features = false, features = ["v4"] }
serde_yaml = { version = "=0.9.34", default-features = false }
proptest = { version = "=1.9.0", default-features = false, features = ["std"] }

[[test]]
name = "integration"
path = "tests/integration/main.rs"

[[test]]
name = "unit"
path = "tests/unit/mod.rs"

[[test]]
name = "proptest"
path = "tests/proptest/mod.rs"
